@@ -1,3 +1,8 @@
+2012-06-13  Vanessa Gil <vanessa.gil@artica.es>
+
+	* godmode/agentes/module_manage_editor_common.php: Disable button
+	'disabled' when a module is linked to a policy.
+
 2012-06-13 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_html.php, include/functions_reporting.php,
